--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,34 @@ button {
   cursor: pointer;
 }
 
+input {
+  height: 25px;
+  font-size: 16px;
+  line-height: 25px;
+  border: 1px solid #b3b3b3;
+  cursor: pointer;
+  padding-left: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+input:focus {
+  outline: none;
+}
+
+select {
+  height: 25px;
+  font-size: 16px;
+  line-height: 25px;
+  border: 1px solid #b3b3b3;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+select:focus {
+  outline: none;
+}
+
 /* Component */
 
 .flex {
@@ -51,6 +79,10 @@ button {
   justify-content: flex-start;
 }
 
+.disable {
+  display: none;
+}
+
 /* Other */
 
 .main {
@@ -66,7 +98,7 @@ button {
 
 .m-bottom {
   margin-top: 20px;
-  height: 50vh;
+  max-height: 50vh;
 }
 
 .m-review {
@@ -84,23 +116,24 @@ button {
   cursor: not-allowed;
 }
 
-#right-arrow {
+.right-arrow {
   width: 20px;
   margin-left: 15px;
   margin-right: 15px;
 }
 
-#image-type {
-  width: 80px;
-  height: 25px;
-  font-size: 16px;
-  line-height: 25px;
-  border: 1px solid #b3b3b3;
-  cursor: pointer;
+.time-operator {
+  width: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-#image-type:focus {
-  outline: none;
+#image-type {
+  width: 80px;
+}
+
+#image-quality {
+  width: 50px;
 }
 
 #convert {
@@ -123,6 +156,11 @@ button {
 
 .m-upload {
   flex-direction: column;
+  width: 60%;
+  height: 60%;
+  border: 8px dashed #b3b3b3;
+  border-radius: 20px;
+  background-color: white;
 }
 
 .m-review {
@@ -142,8 +180,16 @@ button {
   background-position: center;
 }
 
-.disable {
-  display: none;
+.review-image {
+  width: 100%;
+}
+
+.review-box {
+  width: 49%;
+  overflow-y: auto;
+  border: 1px solid #b3b3b3;
+  height: auto;
+  position: relative;
 }
 
 #start-type {
@@ -170,35 +216,41 @@ button {
   background-color: #b3b3b3;
 }
 
-.mh-side {
-  width: 20%;
-}
-
-.mh-mid {
-  width: 60%;
-}
-
-#input-name {
-  margin-right: 10px;
-  width: 200px;
+.input-name {
+  margin-left: 20px;
+  max-width: 200px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-
-#input-size {
-  width: 50px;
-}
-
-#output-name {
-  margin-left: 10px;
-  width: 200px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  text-align: end;
 }
 
 #output-size {
   width: 50px;
+  margin-right: 15px;
+  text-align: right;
+}
+
+#input-size {
+  width: 50px;
+  margin-left: 15px;
+}
+
+#width,
+#height {
+  width: 50px;
+}
+
+.m-top-left {
+  max-width: 75%;
+  overflow: hidden;
+}
+
+.panel-upload {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #efefef;
+  z-index: 10;
 }
