--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,15 @@ select:focus {
   background-color: #b3b3b3;
 }
 
+.ready-convert {
+  border: none !important;
+  background-color: #0cfa83 !important;
+}
+
+.ready-convert:hover {
+  background-color: #00e3b2 !important;
+}
+
 #img-upload {
   width: 20%;
 }
@@ -202,18 +211,19 @@ select:focus {
 }
 
 #btn-download {
+  border: none;
   position: absolute;
   bottom: 40px;
   right: 40px;
-  background-color: white;
+  background-color: #0cebfa;
   padding: 10px;
   border-radius: 50%;
-  border: 1px solid #b3b3b3;
+  /* border: 1px solid #b3b3b3; */
   z-index: 2;
 }
 
 #btn-download:hover {
-  background-color: #b3b3b3;
+  background-color: #0ca6f0;
 }
 
 .input-name {
@@ -226,7 +236,7 @@ select:focus {
 
 #output-size {
   width: 50px;
-  margin-right: 15px;
+  margin-right: 20px;
   text-align: right;
 }
 
