✨ Add drag and drop file
_ Add event dragenter to highlight border
_ Add event dragover to hightlight border
_ Add event dragleave to stop hightlight border
_ Add event drop to upload and read file

--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,10 @@ select:focus {
   background-color: white;
 }
 
+.m-upload-select {
+  border-color: #0cebfa;
+}
+
 .m-review {
   position: relative;
 }
