--- a/css/main.css
+++ b/css/main.css
@@ -297,3 +297,53 @@ select:focus {
 .btn-select:hover {
   background-color: #00e3b2 !important;
 }
+
+progress {
+  background-color: #efefef;
+  border: 0;
+  width: 200px;
+  height: 18px;
+  border-radius: 9px;
+  margin-right: 10px;
+}
+
+progress::-webkit-progress-bar {
+  background-color: #efefef;
+  border-radius: 9px;
+}
+
+progress::-webkit-progress-value {
+  background: #0cfa83;
+  background: -moz-linear-gradient(top, #209e9c 0%, #066767 100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0%, #0cfa83),
+    color-stop(100%, #00e3b2)
+  );
+  background: -webkit-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
+  background: -o-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
+  background: -ms-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
+  background: linear-gradient(to bottom, #0cfa83 0%, #00e3b2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0cfa83', endColorstr='#00e3b2',GradientType=0 );
+  border-radius: 9px;
+}
+
+progress::-moz-progress-bar {
+  background: #0cfa83;
+  background: -moz-linear-gradient(top, #209e9c 0%, #00e3b2 100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0%, #0cfa83),
+    color-stop(100%, #00e3b2)
+  );
+  background: -webkit-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
+  background: -o-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
+  background: -ms-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
+  background: linear-gradient(to bottom, #0cfa83 0%, #00e3b2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0cfa83', endColorstr='#00e3b2',GradientType=0 );
+  border-radius: 9px;
+}
