--- a/lib/cndk.beforeafter.css
+++ b/lib/cndk.beforeafter.css
@@ -229,7 +229,7 @@
 }
 .cndkbeforeafter-theme-light .cndkbeforeafter-item-before-text,
 .cndkbeforeafter-theme-light .cndkbeforeafter-item-after-text {
-  background: white !important;
+  background: rgba(255, 255, 255, 0.7) !important;
   color: black !important;
 }
 
