--- a/css/newMain.css
+++ b/css/newMain.css
@@ -127,6 +127,7 @@ a {
 
 #icon-upload {
   width: 20%;
+  fill: #b3b3b3;
 }
 
 .w-100 {
@@ -191,6 +192,22 @@ a {
   display: none;
 }
 
+.f-15 {
+  font-size: 20px;
+}
+
+.t-blue {
+  color: #00c0ff !important;
+}
+
+.fill-blue {
+  fill: #00c0ff !important;
+}
+
+.ps-r {
+  position: relative;
+}
+
 /* Other */
 
 #logo {
@@ -225,13 +242,28 @@ a {
   text-overflow: ellipsis;
 }
 
+.image-tag:hover .bottom {
+  visibility: visible;
+  opacity: 1;
+}
+
 .tool {
   margin-top: 10px;
   margin-bottom: 10px;
+  width: 300px;
+  position: relative;
 }
 
 .tool-box {
   margin-right: 15px;
+}
+
+.tool-right {
+  width: 200px;
+}
+
+.slider {
+  width: 100px;
 }
 
 .tool-name {
@@ -241,7 +273,6 @@ a {
 .tool-value {
   width: 50px;
   text-align: right;
-  margin-left: 10px;
 }
 
 .side-bar {
@@ -262,7 +293,7 @@ a {
 }
 
 .m-upload-select {
-  border-color: #0cebfa;
+  border-color: #00c0ff;
 }
 
 .panel-upload {
@@ -282,13 +313,12 @@ a {
 /* Slider */
 
 .slidecontainer {
-  width: 30%;
+  /* width: 30%; */
 }
 
 .slider {
   -webkit-appearance: none;
   appearance: none;
-  width: 100%;
   height: 10px;
   background: #d3d3d3;
   outline: none;
@@ -342,11 +372,13 @@ a {
 /* Progress bar */
 
 #progress-bar {
+  border: 1px solid #b3b3b3;
   width: 180px;
 }
 
 #progress-render {
   width: 100%;
+  height: 15px;
 }
 
 progress {
@@ -372,9 +404,120 @@ progress::-moz-progress-bar {
   border-radius: 9px;
 }
 
+/* Tooltip menu */
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip .bottom {
+  min-width: 100px;
+  width: 100%;
+  top: 30px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 10px;
+  color: #000000;
+  background-color: #ffffff;
+  font-weight: normal;
+  font-size: 12px;
+  border-radius: 5px;
+  position: absolute;
+  z-index: 99999999;
+  box-sizing: border-box;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.4s;
+}
+
+.tooltip:hover .bottom {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltip .bottom i {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -12px;
+  width: 16px;
+  height: 8px;
+  overflow: hidden;
+}
+
+.tooltip .bottom i::after {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  left: 50%;
+  transform: translate(-50%, 50%) rotate(45deg);
+  background-color: #ffffff;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
+}
+
+/* pop up */
+
+.pop-up {
+  max-width: 250px;
+  display: none;
+  position: absolute;
+  z-index: 100;
+  padding: 5px;
+  font-size: 12px;
+  background: white;
+  border: 1px solid #a2adbc;
+  border-radius: 5px;
+  margin: 0px;
+  box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
+}
+
+.pop-up-bottom {
+  top: 30px;
+}
+
+.pop-up-left {
+  left: 0;
+  top: 28px;
+}
+
 /* Export */
 
 .export-option {
   margin-top: 12px;
   margin-bottom: 12px;
+}
+
+.export-option p {
+  width: 100px;
+}
+
+#output-name {
+  border: none;
+  color: #888;
+  min-width: 10px;
+}
+
+#hide {
+  display: none;
+  white-space: pre;
+}
+
+#quality-option {
+  position: relative;
+}
+
+.mh-export {
+  max-height: 300px;
+}
+
+.mw-export {
+  max-width: 100%;
+}
+
+/* Footer */
+
+.t-grey {
+  color: #b3b3b3;
 }
