--- a/lib/micromodal.css
+++ b/lib/micromodal.css
@@ -23,8 +23,9 @@
 .modal__container {
   background-color: #fff;
   padding: 30px;
-  min-width: 500px;
+  /* min-width: 500px; */
   max-height: 100vh;
+  width: 500px;
   border-radius: 4px;
   overflow-y: auto;
   box-sizing: border-box;
