--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
+/* Overload default setting */
+
 *,
 *::before,
 *::after {
-  box-sizing: 0;
+  box-sizing: border-box;
 }
 
 html,
@@ -15,6 +17,8 @@ body {
   padding: 0;
   background-color: #efefef;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+  font-size: 15px;
 }
 
 button:focus {
@@ -23,17 +27,36 @@ button:focus {
 
 button {
   cursor: pointer;
-  border: 1px solid;
+  border: none;
+  background-color: transparent;
+  font-size: 15px;
 }
 
-input {
+header {
+  height: 35px;
+  background-color: white;
+}
+
+main {
+  height: calc(100% - 25px);
+}
+
+footer {
   height: 25px;
-  font-size: 16px;
-  line-height: 25px;
+  border-top: 1px solid #b3b3b3;
+  background-color: white;
+}
+
+input[type="text"] {
+  height: 24px;
+  font-size: 15px;
+  line-height: 22px;
   border: 1px solid #b3b3b3;
   cursor: pointer;
-  padding: 0;
-  padding-left: 5px;
+}
+
+input[type="range"] {
+  margin: 0;
 }
 
 input:focus {
@@ -41,9 +64,9 @@ input:focus {
 }
 
 select {
-  height: 27px; /* Because of box-sizing: border box, height ought to plus 2px */
-  font-size: 16px;
-  line-height: 25px;
+  height: 24px; /* Because of box-sizing: border box, height ought to plus 2px */
+  font-size: 15px;
+  line-height: 22px;
   border: 1px solid #b3b3b3;
   cursor: pointer;
 }
@@ -56,117 +79,209 @@ p {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Component */
 
 .flex {
   display: flex;
 }
 
+.f-column {
+  flex-direction: column;
+}
+
 .f-center {
   justify-content: center;
-}
-
-.f-vcenter {
-  align-items: center;
-}
-
-.f-spacebetween {
-  justify-content: space-between;
-}
-
-.f-right {
-  justify-content: flex-end;
 }
 
 .f-left {
   justify-content: flex-start;
 }
 
-.disable {
-  display: none;
+.f-right {
+  justify-content: flex-end;
+}
+
+.f-spacebetween {
+  justify-content: space-between;
+}
+
+.f-vcenter {
+  align-items: center;
+}
+
+.icon-s {
+  height: 8px;
+}
+
+.icon-m {
+  height: 15px;
+}
+
+.icon-l {
+  height: 20px;
+}
+
+#icon-upload {
+  width: 20%;
+  fill: #b3b3b3;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.h-100 {
+  height: 100vh;
+}
+
+.hp-100 {
+  height: 100%;
+}
+
+.w-80 {
+  width: 80%;
+}
+
+.w-20 {
+  width: 20%;
+}
+
+.btn-border {
+  border: 1px solid #b3b3b3;
+}
+
+.btn-hover:hover {
+  background-color: #efefef;
+}
+
+.mt-20 {
+  margin-top: 20px;
 }
 
 .ml-10 {
   margin-left: 10px;
 }
 
+.mr-10 {
+  margin-right: 10px;
+}
+
+.ml-5 {
+  margin-left: 5px;
+}
+
+.mr-5 {
+  margin-right: 5px;
+}
+
+.i-val {
+  width: 32px;
+  margin-right: 5px;
+  text-align: right;
+}
+
+.i-4 {
+  width: 40px;
+}
+
+.disable {
+  display: none;
+}
+
+.f-15 {
+  font-size: 20px;
+}
+
+.t-blue {
+  color: #00c0ff !important;
+}
+
+.fill-blue {
+  fill: #00c0ff !important;
+}
+
+.ps-r {
+  position: relative;
+}
+
 /* Other */
 
-.main {
-  width: 80%;
+#logo {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
-.m-top {
-  height: 50px;
-  background-color: white;
-  border: 1px solid #b3b3b3;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  padding-right: 20px;
-  padding-left: 20px;
+.header {
+  border-bottom: 1px solid #b3b3b3;
 }
 
-.m-bottom {
-  max-height: 50vh;
+.image-tag {
+  max-width: 180px;
+  min-width: 120px;
+  border-left: 1px solid #b3b3b3;
+  border-right: 1px solid #b3b3b3;
+  padding-left: 8px;
+  cursor: pointer;
 }
 
-.m-compare {
-  max-height: 50vh;
-  overflow-y: auto;
-}
-
-.height50 {
-  max-height: 50vh;
-}
-
-.m-review {
-  width: 49%;
-  background-color: white;
-  border: 1px solid #b3b3b3;
-}
-
-#start-type {
-  width: 80px;
-  height: 25px;
-  font-size: 16px;
-  line-height: 25px;
-  border: 1px solid #b3b3b3;
-  cursor: not-allowed;
-}
-
-.right-arrow {
-  width: 20px;
-  margin-left: 10px;
-}
-
-.time-operator {
-  width: 10px;
-}
-
-#image-type {
-  width: 65px;
-}
-
-#image-quality {
-  width: 50px;
-}
-
-#convert {
-  width: 80px;
-  height: 25px;
-  font-size: 16px;
-  line-height: 25px;
-  border: 1px solid #b3b3b3;
+.image-tag:hover {
   background-color: #efefef;
 }
 
-#convert:hover {
-  background-color: #b3b3b3;
+.image-selected {
+  background-color: #efefef;
 }
 
-#img-upload {
-  width: 20%;
+.image-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
+.image-tag:hover .bottom {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tool {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 300px;
+  position: relative;
+}
+
+.tool-box {
+  margin-right: 15px;
+}
+
+.tool-right {
+  width: 200px;
+}
+
+.slider {
+  width: 100px;
+}
+
+.tool-name {
+  width: 100px;
+}
+
+.tool-value {
+  width: 50px;
+  text-align: right;
+}
+
+.side-bar {
+  background-color: white;
+  border-left: 1px solid #b3b3b3;
+  padding-top: 40px;
+}
+
+/* Upload panel */
 
 .m-upload {
   flex-direction: column;
@@ -178,87 +293,7 @@ p {
 }
 
 .m-upload-select {
-  border-color: #0cebfa;
-}
-
-.m-review {
-  position: relative;
-}
-
-.review {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background-color: white;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.review-image {
-  width: 100%;
-}
-
-.review-box {
-  width: 49%;
-  overflow-y: auto;
-  border: 1px solid #b3b3b3;
-  height: auto;
-  position: relative;
-}
-
-#start-type {
-  text-align: center;
-}
-
-.img-download {
-  width: 30px;
-  height: 30px;
-}
-
-.btn-download {
-  border: none;
-  position: absolute;
-  bottom: 40px;
-  right: 40px;
-  background-color: #0cebfa;
-  padding: 10px;
-  border-radius: 50%;
-  z-index: 60;
-}
-
-.btn-download:hover {
-  background-color: #0ca6f0;
-}
-
-.input-name {
-  max-width: 200px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-#output-size {
-  width: 70px;
-  margin-right: 10px;
-  text-align: right;
-}
-
-#input-size {
-  width: 70px;
-  text-align: right;
-}
-
-#width,
-#height {
-  width: 38px;
-}
-
-.m-top-left {
-  max-width: 75%;
+  border-color: #00c0ff;
 }
 
 .panel-upload {
@@ -275,39 +310,80 @@ p {
   cursor: pointer;
 }
 
-.btn-icon {
-  height: 18px;
+/* Slider */
+
+.slidecontainer {
+  /* width: 30%; */
 }
 
-.btn-top {
-  height: 25px;
-  padding-left: 12px;
-  padding-right: 12px;
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 10px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
-.btn-left {
-  margin-right: 15px;
+.slider:hover {
+  opacity: 1;
 }
 
-.btn-right {
-  margin-left: 15px;
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 24px;
+  border: 0;
+  border-radius: 3px;
+  background: #0cfa83;
+  cursor: pointer;
 }
 
-.btn-select {
-  background-color: #0cfa83 !important;
-  border-color: #00e3b2 !important;
+.slider::-moz-range-thumb {
+  width: 10px;
+  height: 24px;
+  border: 0;
+  border-radius: 3px;
+  background: #0cfa83;
+  cursor: pointer;
 }
 
-.btn-select:hover {
-  background-color: #00e3b2 !important;
+/* Preview mode */
+
+.review-box {
+  display: flex;
+  justify-content: center;
+}
+
+#preview-mode {
+  overflow-y: auto;
+  height: calc(100% - 36px);
+}
+
+.drag-active {
+  cursor: grabbing;
+  cursor: -webkit-grabbing;
 }
 
 /* Progress bar */
 
-progress {
-  background-color: #efefef;
-  border: 0;
+#progress-bar {
+  border: 1px solid #b3b3b3;
   width: 180px;
+}
+
+#progress-render {
+  width: 100%;
+  height: 15px;
+}
+
+progress {
+  background-color: #b3b3b3;
+  border: 0;
   height: 18px;
   border-radius: 9px;
   margin-right: 10px;
@@ -319,38 +395,12 @@ progress::-webkit-progress-bar {
 }
 
 progress::-webkit-progress-value {
-  background: #0cfa83;
-  background: -moz-linear-gradient(top, #209e9c 0%, #066767 100%);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0%, #0cfa83),
-    color-stop(100%, #00e3b2)
-  );
-  background: -webkit-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
-  background: -o-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
-  background: -ms-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
-  background: linear-gradient(to bottom, #0cfa83 0%, #00e3b2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0cfa83', endColorstr='#00e3b2',GradientType=0 );
+  background: rgb(255, 99, 71);
   border-radius: 9px;
 }
 
 progress::-moz-progress-bar {
-  background: #0cfa83;
-  background: -moz-linear-gradient(top, #209e9c 0%, #00e3b2 100%);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0%, #0cfa83),
-    color-stop(100%, #00e3b2)
-  );
-  background: -webkit-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
-  background: -o-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
-  background: -ms-linear-gradient(top, #0cfa83 0%, #00e3b2 100%);
-  background: linear-gradient(to bottom, #0cfa83 0%, #00e3b2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0cfa83', endColorstr='#00e3b2',GradientType=0 );
+  background: rgb(255, 99, 71);
   border-radius: 9px;
 }
 
@@ -361,7 +411,8 @@ progress::-moz-progress-bar {
 }
 
 .tooltip .bottom {
-  min-width: 200px;
+  min-width: 100px;
+  width: 100%;
   top: 30px;
   left: 50%;
   transform: translate(-50%, 0);
@@ -404,4 +455,69 @@ progress::-moz-progress-bar {
   transform: translate(-50%, 50%) rotate(45deg);
   background-color: #ffffff;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
+}
+
+/* pop up */
+
+.pop-up {
+  max-width: 250px;
+  display: none;
+  position: absolute;
+  z-index: 100;
+  padding: 5px;
+  font-size: 12px;
+  background: white;
+  border: 1px solid #a2adbc;
+  border-radius: 5px;
+  margin: 0px;
+  box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
+}
+
+.pop-up-bottom {
+  top: 30px;
+}
+
+.pop-up-left {
+  left: 0;
+  top: 28px;
+}
+
+/* Export */
+
+.export-option {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.export-option p {
+  width: 100px;
+}
+
+#output-name {
+  border: none;
+  color: #888;
+  min-width: 10px;
+}
+
+#hide {
+  display: none;
+  white-space: pre;
+}
+
+#quality-option {
+  position: relative;
+}
+
+.mh-export {
+  max-height: 300px;
+}
+
+.mw-export {
+  max-width: 100%;
+}
+
+/* Footer */
+
+.t-grey {
+  color: #b3b3b3;
 }
